# robot_soccer_ws

./: .gitmodules
dummyteam/: CMakeLists.txt  package.xml
dummyteam/launch/: dummyteam.launch
dummyteam/src/: controller.cpp
slash_dash_bang_hash/: CMakeLists.txt  package.xml
slash_dash_bang_hash/include/: PID.h  ai.h  utilities.h
slash_dash_bang_hash/include /: ai.h  controller.h  utilities.h
slash_dash_bang_hash/include/AI/: ai.h  skills.h
slash_dash_bang_hash/include/Estimator/: estimator.h  samplesQueue.h
slash_dash_bang_hash/include/Motion/: motion_control.h
slash_dash_bang_hash/include/PathPlanner/: path_planner.h
slash_dash_bang_hash/include/Utilities/: utilities.h
slash_dash_bang_hash/include/Vision/: vision.h
slash_dash_bang_hash/include/controller/: PID.h  PID.h.gch  controller.h
slash_dash_bang_hash/launch/: ally1.launch  ally2.launch  bang.launch  referee.launch  robot.launch  robot2.launch  slash.launch  slash_dash_bang_hash.launch  vision.launch
slash_dash_bang_hash/msg/: BallState.msg  MotorSpeeds.msg  State.msg
slash_dash_bang_hash/src/: ai.cpp  controller.cpp  utilities.cpp
slash_dash_bang_hash/src/AI/: ai.cpp  skills.cpp
slash_dash_bang_hash/src/Estimator/: estimator.cpp  samplesQueue.cpp
slash_dash_bang_hash/src/Motion/: bang_lookup_table.npy  bang_motor_calibration.py  kicker.py  motion_control.cpp  motion_control_node.py  motion_control_node2.py  motion_control_node_bang.py  motion_control_node_slash.py  slash_motor_calibration.py  slash_motor_calibration0.py
slash_dash_bang_hash/src/PathPlanner/: path_planner.cpp
slash_dash_bang_hash/src/Utilities/: utilities.cpp
slash_dash_bang_hash/src/Vision/: vision.cpp
slash_dash_bang_hash/src/controller/: PID.cpp  controller.cpp
team_docs/: Robot Information.docx  Task List.xlsx  Task Schedule.xlsx
team_docs/Business Stuff/: Body of Facts.docx  Concept Generation and Selection Document.docx  Design Review 2.pptx  Draft Concept Generation.docx  Functional Specification Document.docx  Market Analysis.docx  Robot Soccer Design Review.pptx  Task List.docx  Test Plan.docx
team_docs/Hardware/: Hardware To Do.docx  Parts List.xlsx  Wiring for Robot.docx
team_docs/Software/: ROS Launch Notes.docx  Software Notes.docx
